update pixel's work

--- a/src/pug/layouts/general/pixel.pug
+++ b/src/pug/layouts/general/pixel.pug
@@ -12,9 +12,35 @@ section.work.work--center
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
+              +img('pixel.jpg', "Pixel2HTML's website screenshsot")
               figcaption
                 h3  Pixel2HTML
+                ul
+                  li #HTML
+                  li #CSS
+                  li #JS
+                  li #Animation
+                span view site
+      .col-sm-6.col-md-3
+        .pixel-block.pixel-block--pixel
+          a(href="https://www.mercadoshops.com.ar/", title="Mercado Shops's website", target="_blank", rel="noopener")
+            figure
+              +img('mercadoshops.jpg', "Mercado Shops's website screenshsot")
+              figcaption
+                h3  Mercado Shops
+                ul
+                  li #HTML
+                  li #CSS
+                  li #JS
+                  li #Animation
+                span view site
+      .col-sm-6.col-md-3
+        .pixel-block.pixel-block--pixel
+          a(href="https://jampp.com/case-studies/deliveroo/", title="jampp's website", target="_blank", rel="noopener")
+            figure
+              +img('jampp.jpg', "jampp's website screenshsot")
+              figcaption
+                h3  Jammpp
                 ul
                   li #Animation
                   li #HTML
@@ -23,93 +49,66 @@ section.work.work--center
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
+          a(href="https://demos.pixel2html.com/0003007/0004654/index.html", title="ICO Comply's website", target="_blank", rel="noopener")
             figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
+              +img('icocomply.jpg', "ICO Comply's website screenshsot")
               figcaption
-                h3  Pixel2HTML
+                h3  ICO Comply
                 ul
-                  li #Animation
                   li #HTML
                   li #CSS
                   li #JS
-                span view site
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
-          a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
-            figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
-              figcaption
-                h3  Pixel2HTML
-                ul
-                  li #Animation
-                  li #HTML
-                  li #CSS
-                  li #JS
-                span view site
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
-          a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
-            figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
-              figcaption
-                h3  Pixel2HTML
-                ul
-                  li #Animation
-                  li #HTML
-                  li #CSS
-                  li #JS
+                  li #Landing
                 span view site
 
     .row
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
+          a(href="https://www.ripvan.com/", title="Rip Van's website", target="_blank", rel="noopener")
             figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
+              +img('ripvan.jpg', "Rip Van's website screenshsot")
               figcaption
-                h3  Pixel2HTML
+                h3  Rip Van
                 ul
-                  li #Animation
+                  li #Waffles
                   li #HTML
                   li #CSS
                   li #JS
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
+          a(href="https://toi.io/", title="Toi's website", target="_blank", rel="noopener")
             figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
+              +img('toi.jpg', "Toi's website screenshsot")
               figcaption
-                h3  Pixel2HTML
+                h3  Toi
                 ul
-                  li #Animation
                   li #HTML
                   li #CSS
                   li #JS
+                  li #Animation
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
+          a(href="http://chicagomontessori.org/", title="Chicago Montessori's website", target="_blank", rel="noopener")
             figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
+              +img('chicagomontessori.jpg', "Chicago Montessori's website screenshsot")
               figcaption
-                h3  Pixel2HTML
+                h3  Chicago Montessori
                 ul
-                  li #Animation
                   li #HTML
                   li #CSS
                   li #JS
+                  li #Animation
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
+          a(href="https://demos.pixel2html.com/0000122/0004632/index.html", title="Borrow's website", target="_blank", rel="noopener")
             figure
-              +img('pixel@2x.jpg', "Pixel2HTML's website screenshsot")
+              +img('borrow.jpg', "Borrow's website screenshsot")
               figcaption
-                h3  Pixel2HTML
+                h3  Borrow
                 ul
-                  li #Animation
                   li #HTML
                   li #CSS
                   li #JS
