--- a/src/assets/styles/main/components/_hero.scss
+++ b/src/assets/styles/main/components/_hero.scss
@@ -122,7 +122,8 @@
   right: 0;
   margin: 0 auto;
   display: none;
-  width: rem(34);
+  width: rem(36);
+  padding: 0;
   text-align: center;
   z-index: 1;
 
