improve pixel's work

--- a/src/assets/styles/main/components/_footer.scss
+++ b/src/assets/styles/main/components/_footer.scss
@@ -10,6 +10,10 @@
   z-index: 2;
 
   h4 {
-    font-size: rem(20);
+    font-size: rem(18);
+
+    @include breakpoint(sm) {
+      font-size: rem(20);
+    }
   }
 }
