--- a/src/pug/layouts/layout-primary.pug
+++ b/src/pug/layouts/layout-primary.pug
@@ -11,6 +11,14 @@ html(lang='en')
     link(rel='manifest' href='assets/head/manifest.json')
     link(rel="shortcut icon" href="assets/head/favicon.ico")
     link(rel="icon" type="image/png" href="assets/head/favicon.png")
+      
+    meta(property='og:title', content='Juan Di Nella web designer and frontend developer')
+    meta(property='og:description', content='I’m a 27-year-old Argentinian-Italian web designer and frontend developer living in Buenos Aires and looking forward to moving to Europe. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.')
+    meta(property='og:type', content='website')
+    meta(property='og:url', content='https://www.juandinella.com')
+    meta(property='og:site_name', content='Juan Di Nella')
+
+      
     if production
       link(rel='stylesheet', href='assets/css/main.min.css')
     else
