--- a/src/pug/layouts/layout-primary.pug
+++ b/src/pug/layouts/layout-primary.pug
@@ -17,6 +17,7 @@ html(lang='en')
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://www.juandinella.com')
     meta(property='og:site_name', content='Juan Di Nella')
+    meta(property='og:image', content='https://www.juandinella.com/assets/images/web.jpg')
 
       
     if production
