--- a/src/pug/layouts/general/pixel.pug
+++ b/src/pug/layouts/general/pixel.pug
@@ -90,16 +90,16 @@ section.work.work--center
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="http://chicagomontessori.org/", title="Chicago Montessori's website", target="_blank", rel="noopener")
+          a(href="https://www.searchrpm.com/", title="SearchRPM's website", target="_blank", rel="noopener")
             figure
-              +img('chicagomontessori.jpg', "Chicago Montessori's website screenshsot")
+              +img('searchrpm.jpg', "SearchRPM's website screenshsot")
               figcaption
-                h3  Chicago Montessori
+                h3  SearchRPM
                 ul
                   li #HTML
                   li #CSS
                   li #JS
-                  li #Animation
+                  li #SEO
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
