change a word in soy solo section

--- a/src/pug/layouts/general/soy-solo.pug
+++ b/src/pug/layouts/general/soy-solo.pug
@@ -7,7 +7,7 @@ section.work.work--even
           .work--text__about
             p #[em Soy solo] is a book of honest stories about leadership to be happy in the 21st century and beyond by Leo Piccioli.
           .work--text__description
-            p Leo requested me to create a landing page for his brand new book, #[em Soy solo]. He wanted a simple, clean, fast website and I designed and frontended one for him.
+            p Leo requested me to create a landing page for his brand new book, #[em Soy solo]. He wanted a simple, clean, fast website and I designed and developed one for him.
             a(href="http://soy-solo.netlify.com/", title="Soy solo's website", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
