--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -1,4 +1,4 @@
-section.work.work--odd
+section.work.work--odd(aria-label="Neolo work")
   .container
     .row
       .col-md-6.edge
@@ -12,7 +12,6 @@ section.work.work--odd
           .work--text__description
             p Since Neolo is constantly growing and expanding, its website needed to be able to adapt to their necessities and be responsive to that. My role in this project was to redesign the complete experience, create a new UI and develop the frontend.
             p For this job I tried to focus mainly on emotional design and create reusable blocks that could work for the different pages.
-
             a(href="https://www.neolo.com/argentina/", title="", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
