--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,8 @@ block content
   include layouts/general/hero
 
   section#works
+    include layouts/general/satellogic
+    include layouts/general/lopez
     include layouts/general/soy-solo
     include layouts/general/neolo
-    include layouts/general/doncupones
     include layouts/general/pixel
