--- a/src/pug/layouts/general/pixel.pug
+++ b/src/pug/layouts/general/pixel.pug
@@ -1,11 +1,10 @@
-section.work.work--center
+section.work.work--center(aria-label="Frontend work")
   .container
     .row
       .col-md-12
         .work--text
           h2 Frontend work
-          p I’ve been working for more than 3 years as a frontend dev at Pixel2HTML. But, what’s Pixel2HTML? Lemme tell you. Pixel2HTML is FrontEnd Development Company that helps Freelancers, Startups &amp; Agencies to get the best HTML/CSS and JavaScript code for their site.
-          
+          p I’ve been working for more than 4 years as a frontend dev at Pixel2HTML. But, what’s Pixel2HTML? Lemme tell you. Pixel2HTML is FrontEnd Development Company that helps Freelancers, Startups &amp; Agencies to get the best HTML/CSS and JavaScript code for their site.
   .container-fluid.work--pixel.hz
     .row
       .col-sm-6.col-md-3
