--- a/src/assets/styles/main/screens/_base.scss
+++ b/src/assets/styles/main/screens/_base.scss
@@ -1,17 +1,15 @@
-*, *::before {
+*,
+*::before {
   box-sizing: border-box;
 }
 
 html {
-  /* min-height: 100%;
-  height: 100%; */
   position: relative;
   font-family: $system-fonts;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   .hero {
-
     h1 {
       font-weight: 800;
       letter-spacing: rem(4);
@@ -27,7 +25,6 @@ html {
     font-family: $font;
 
     .hero {
-
       h1 {
         font-weight: 700;
         letter-spacing: 0;
@@ -44,14 +41,13 @@ html {
 body {
   font: inherit;
   line-height: inherit;
-  /* height: 100%; */
   margin: 0;
   position: relative;
 }
 
 img {
   max-width: 100%;
-  transition: .2s;
+  transition: 0.2s;
 
   &.lazyload {
     filter: blur(2px);
@@ -62,18 +58,15 @@ img {
   }
 }
 
-
 a {
   color: $black;
 }
 
 ::selection {
-  background-color: rgba($black,0.99);
+  background-color: rgba($black, 0.99);
   color: $white;
   opacity: 1;
-
 }
-
 
 .visuallyHidden {
   border: 0;
@@ -89,7 +82,6 @@ a {
 ul {
   padding-left: 0;
 }
-
 
 .hz {
   position: relative;
