--- a/src/pug/layouts/general/lopez.pug
+++ b/src/pug/layouts/general/lopez.pug
@@ -11,6 +11,6 @@ section.work.work--odd(aria-label="Lopez Hostel and Suites work")
             p Lopez Hostel &amp; Suites is a boutique hostel in Palermo, Buenos Aires.
           .work--text__description
             p I had the pleasure to work with this great hostel making a redesign and the frontend of their new website.
-            a(href="https://www.neolo.com/argentina/", title="", target="_blank", rel="noopener")
+            a(href="https://lopezhostel.com", title="", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
