--- a/src/pug/layouts/layout-primary.pug
+++ b/src/pug/layouts/layout-primary.pug
@@ -2,18 +2,18 @@ doctype html
 html(lang='en', dir='ltr')
   head
     block title
-      title Juan Di Nella - Web designer and frontend developer
+      title Juan Di Nella - Web Designer and UI Developer
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    meta(name='description' content='I’m a 27-year-old Argentinian-Italian web designer and frontend developer living in Buenos Aires and looking forward to moving to Europe. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.')
+    meta(name='description' content='I’m a 29-year-old Argentinian freelance UI Developer living in Argentina. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.')
     meta(name='theme-color', content='#000000')
     link(rel='manifest' href='assets/head/manifest.json')
     link(rel="shortcut icon" href="assets/head/favicon.ico")
     link(rel="icon" type="image/png" href="assets/head/favicon.png")
 
-    meta(property='og:title', content='Juan Di Nella web designer and frontend developer')
-    meta(property='og:description', content='I’m a 27-year-old Argentinian-Italian web designer and frontend developer living in Buenos Aires and looking forward to moving to Europe. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.')
+    meta(property='og:title', content='Juan Di Nella Web Designer and UI Developer')
+    meta(property='og:description', content='I’m a 29-year-old Argentinian freelance UI Developer living in Argentina. I’m a really curious person, and in spite of having a university degree, I consider myself a self-taught person constantly learning and always looking for new things to improve.')
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://www.juandinella.com')
     meta(property='og:site_name', content='Juan Di Nella')
