--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,6 +7,7 @@ block content
 
   section#works
     include layouts/general/satellogic
+    include layouts/general/rixner
     include layouts/general/lopez
     include layouts/general/soy-solo
     include layouts/general/neolo
