--- a/src/pug/layouts/general/pixel.pug
+++ b/src/pug/layouts/general/pixel.pug
@@ -4,7 +4,7 @@ section.work.work--center(aria-label="Frontend work")
       .col-md-12
         .work--text
           h2 Frontend work
-          p I’ve been working for more than 4 years as a frontend dev at Pixel2HTML. But, what’s Pixel2HTML? Lemme tell you. Pixel2HTML is FrontEnd Development Company that helps Freelancers, Startups &amp; Agencies to get the best HTML/CSS and JavaScript code for their site.
+          p I’ve been working for more than 6 years as a frontend dev freelance or in companies like #[a(href="http://pixel2html.com" title="Pixel2HTML's website", target="_blank", rel="noopener") Pixel2HTML] or #[a(href="http://bons.io/" title="Bons's website", target="_blank", rel="noopener") Bons]. And here there's a collection of projects that I made.
   .container-fluid.work--pixel.hz
     .row
       .col-sm-6.col-md-3
@@ -35,34 +35,6 @@ section.work.work--center(aria-label="Frontend work")
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="https://jampp.com/case-studies/deliveroo/", title="jampp's website", target="_blank", rel="noopener")
-            figure
-              +img('jampp.jpg', "jampp's website screenshsot")
-              figcaption
-                h3  Jammpp
-                ul
-                  li #Animation
-                  li #HTML
-                  li #CSS
-                  li #JS
-                span view site
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
-          a(href="https://demos.pixel2html.com/0003007/0004654/index.html", title="ICO Comply's website", target="_blank", rel="noopener")
-            figure
-              +img('icocomply.jpg', "ICO Comply's website screenshsot")
-              figcaption
-                h3  ICO Comply
-                ul
-                  li #HTML
-                  li #CSS
-                  li #JS
-                  li #Landing
-                span view site
-
-    .row
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
           a(href="https://www.ripvan.com/", title="Rip Van's website", target="_blank", rel="noopener")
             figure
               +img('ripvan.jpg', "Rip Van's website screenshsot")
@@ -87,6 +59,8 @@ section.work.work--center(aria-label="Frontend work")
                   li #JS
                   li #Animation
                 span view site
+
+    .row
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://www.searchrpm.com/", title="SearchRPM's website", target="_blank", rel="noopener")
@@ -102,13 +76,40 @@ section.work.work--center(aria-label="Frontend work")
                 span view site
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
-          a(href="https://demos.pixel2html.com/0000122/0004632/index.html", title="Borrow's website", target="_blank", rel="noopener")
+          a(href="https://m13.co/", title="m13 Ventures's website", target="_blank", rel="noopener")
             figure
-              +img('borrow.jpg', "Borrow's website screenshsot")
+              +img('m13.jpg', "m13 Ventures's website screenshsot")
               figcaption
-                h3  Borrow
+                h3  m13 Ventures
                 ul
                   li #HTML
                   li #CSS
                   li #JS
+                  li #Webflow
+                span view site
+      .col-sm-6.col-md-3
+        .pixel-block.pixel-block--pixel
+          a(href="https://semigator.haufe.de/", title="Haufe Semigator's website", target="_blank", rel="noopener")
+            figure
+              +img('semigator.jpg', "Haufe Semigator's website screenshsot")
+              figcaption
+                h3  Haufe Semigator
+                ul
+                  li #Webflow
+                  li #HTML
+                  li #CSS
+                  li #JS
+                span view site
+      .col-sm-6.col-md-3
+        .pixel-block.pixel-block--pixel
+          a(href="https://super.ai/", title="Super.ai's website", target="_blank", rel="noopener")
+            figure
+              +img('superai.jpg', "Super.ai's website screenshsot")
+              figcaption
+                h3  Super.ai
+                ul
+                  li #HTML
+                  li #CSS
+                  li #JS
+                  li #Webflow
                 span view site
