--- a/src/pug/layouts/general/footer.pug
+++ b/src/pug/layouts/general/footer.pug
@@ -3,4 +3,4 @@ footer.mainFooter
     .row
       .col-md-12
         #magic
-          h4 Can someone turn #[span#magic-text(data-text-swap='off') on] the lights ?
+          p Can someone turn #[span#magic-text(data-text-swap='off') on] the lights ?
