--- a/src/pug/layouts/general/pixel.pug
+++ b/src/pug/layouts/general/pixel.pug
@@ -60,7 +60,7 @@ section.work.work--center(aria-label="Frontend work")
                   li #Animation
                 span view site
 
-    .row
+    //- .row
       .col-sm-6.col-md-3
         .pixel-block.pixel-block--pixel
           a(href="https://www.searchrpm.com/", title="SearchRPM's website", target="_blank", rel="noopener")
@@ -74,42 +74,4 @@ section.work.work--center(aria-label="Frontend work")
                   li #JS
                   li #SEO
                 span view site
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
-          a(href="https://m13.co/", title="m13 Ventures's website", target="_blank", rel="noopener")
-            figure
-              +img('m13.jpg', "m13 Ventures's website screenshsot")
-              figcaption
-                h3  m13 Ventures
-                ul
-                  li #HTML
-                  li #CSS
-                  li #JS
-                  li #Webflow
-                span view site
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
-          a(href="https://semigator.haufe.de/", title="Haufe Semigator's website", target="_blank", rel="noopener")
-            figure
-              +img('semigator.jpg', "Haufe Semigator's website screenshsot")
-              figcaption
-                h3  Haufe Semigator
-                ul
-                  li #Webflow
-                  li #HTML
-                  li #CSS
-                  li #JS
-                span view site
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
-          a(href="https://super.ai/", title="Super.ai's website", target="_blank", rel="noopener")
-            figure
-              +img('superai.jpg', "Super.ai's website screenshsot")
-              figcaption
-                h3  Super.ai
-                ul
-                  li #HTML
-                  li #CSS
-                  li #JS
-                  li #Webflow
-                span view site
+
