--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,8 +6,9 @@ block content
   include layouts/general/hero
 
   section#works
-    include layouts/general/satellogic
+    include layouts/general/penny
     include layouts/general/lopez
+    include layouts/general/satellogic
     include layouts/general/rixner
     include layouts/general/neolo
     include layouts/general/soy-solo
