--- a/src/pug/layouts/general/doncupones.pug
+++ b/src/pug/layouts/general/doncupones.pug
@@ -13,4 +13,4 @@ section.work.work--even
               +svg('arrow-right')
       .col-md-6.edge
         .work--img.hz
-          +img('doncupones.jpg', "Doncupones's website screenshot")
+          img(src="assets/images/doncupones.jpg", alt="Doncupones's website screenshot")
