--- a/src/pug/layouts/general/lopez.pug
+++ b/src/pug/layouts/general/lopez.pug
@@ -3,7 +3,7 @@ section.work.work--odd(aria-label="Lopez Hostel and Suites work")
     .row
       .col-md-6.edge
         .work--img.hz
-          +img('lopez.jpg', "Lopez Hostel and Suites's website screenshot")
+          img(src="assets/images/lopez.jpg", alt="Lopez Hostel and Suites's website screenshot")
       .col-md-6.mla
         .work--text
           h2 Lopez Hostel &amp; Suites
