--- a/src/pug/layouts/general/neolo.pug
+++ b/src/pug/layouts/general/neolo.pug
@@ -3,7 +3,7 @@ section.work.work--odd(aria-label="Neolo work")
     .row
       .col-md-6.edge
         .work--img.hz
-          +img('neolo.jpg', "Neolo's website screenshot")
+          img(src="assets/images/neolo.jpg", alt="Neolo's website screenshot")
       .col-md-6.mla
         .work--text
           h2 Neolo
