--- a/src/pug/layouts/general/pixel.pug
+++ b/src/pug/layouts/general/pixel.pug
@@ -11,7 +11,7 @@ section.work.work--center(aria-label="Frontend work")
         .pixel-block.pixel-block--pixel
           a(href="https://pixel2html.com/", title="Pixel2HTML's website", target="_blank", rel="noopener")
             figure
-              +img('pixel.jpg', "Pixel2HTML's website screenshsot")
+              img(src="assets/images/pixel.jpg", alt="Pixel2HTML's website screenshsot")
               figcaption
                 h3  Pixel2HTML
                 ul
@@ -24,7 +24,7 @@ section.work.work--center(aria-label="Frontend work")
         .pixel-block.pixel-block--pixel
           a(href="https://www.mercadoshops.com.ar/", title="Mercado Shops's website", target="_blank", rel="noopener")
             figure
-              +img('mercadoshops.jpg', "Mercado Shops's website screenshsot")
+              img(src="assets/images/mercadoshops.jpg", alt="Mercado Shops's website screenshsot")
               figcaption
                 h3  Mercado Shops
                 ul
@@ -37,7 +37,7 @@ section.work.work--center(aria-label="Frontend work")
         .pixel-block.pixel-block--pixel
           a(href="https://www.ripvan.com/", title="Rip Van's website", target="_blank", rel="noopener")
             figure
-              +img('ripvan.jpg', "Rip Van's website screenshsot")
+              img(src="assets/images/ripvan.jpg", alt="Rip Van's website screenshsot")
               figcaption
                 h3  Rip Van
                 ul
@@ -50,7 +50,8 @@ section.work.work--center(aria-label="Frontend work")
         .pixel-block.pixel-block--pixel
           a(href="https://toi.io/", title="Toi's website", target="_blank", rel="noopener")
             figure
-              +img('toi.jpg', "Toi's website screenshsot")
+              img(src="assets/images/toi.jpg", alt="Toi's website screenshsot")
+
               figcaption
                 h3  Toi
                 ul
@@ -58,20 +59,5 @@ section.work.work--center(aria-label="Frontend work")
                   li #CSS
                   li #JS
                   li #Animation
-                span view site
-
-    //- .row
-      .col-sm-6.col-md-3
-        .pixel-block.pixel-block--pixel
-          a(href="https://www.searchrpm.com/", title="SearchRPM's website", target="_blank", rel="noopener")
-            figure
-              +img('searchrpm.jpg', "SearchRPM's website screenshsot")
-              figcaption
-                h3  SearchRPM
-                ul
-                  li #HTML
-                  li #CSS
-                  li #JS
-                  li #SEO
                 span view site
 
