--- a/src/pug/layouts/general/rixner.pug
+++ b/src/pug/layouts/general/rixner.pug
@@ -13,4 +13,5 @@ section.work.work--even(aria-label="Satellogic work")
               +svg('arrow-right')
       .col-md-6.edge
         .work--img.hz
-          +img('rixner.jpg', "Rixner's website screenshot")
+          img(src="assets/images/rixner.jpg", alt="Rixner's website screenshot")
+
