--- a/src/pug/layouts/general/satellogic.pug
+++ b/src/pug/layouts/general/satellogic.pug
@@ -13,4 +13,4 @@ section.work.work--even(aria-label="Satellogic work")
               +svg('arrow-right')
       .col-md-6.edge
         .work--img.hz
-          +img('satellogic.jpg', "Satellogic's website screenshot")
+          img(src="assets/images/satellogic.jpg", alt="Satellogic's website screenshot")
