--- a/src/pug/layouts/general/soy-solo.pug
+++ b/src/pug/layouts/general/soy-solo.pug
@@ -13,4 +13,4 @@ section.work.work--even(aria-label="Soy Solo work")
               +svg('arrow-right')
       .col-md-6.edge
         .work--img.hz
-          +img('soy-solo.jpg', "Soy Solo's website screenshot")
+          img(src="assets/images/soy-solo.jpg", alt="Soy Solo's website screenshot")
