--- a/src/pug/layouts/general/penny.pug
+++ b/src/pug/layouts/general/penny.pug
@@ -1,7 +1,10 @@
-section.work.work--even(aria-label="Penny Design System")
+section.work.work--odd(aria-label="Penny Design System")
   .container
     .row
-      .col-md-6
+      .col-md-6.edge
+        .work--img.hz
+          img(src="assets/images/penny.jpg", alt="Penny's website screenshot")
+      .col-md-6.mla
         .work--text
           h2 Penny
           .work--text__about
@@ -10,7 +13,5 @@ section.work.work--even(aria-label="Penny Design System")
             a(href="https://main--624aecefae45c1003a80bf5b.chromatic.com/?path=/story/intro--page", title="Penny's website", target="_blank", rel="noopener")
               span Visit the website
               +svg('arrow-right')
-      .col-md-6.edge
-        .work--img.hz
-          img(src="assets/images/penny.jpg", alt="Penny's website screenshot")
+
 
